2010-04-23  Richard Guenther  <rguenther@suse.de>

	PR lto/42653
	* tree.c (free_lang_data_in_decl): Do not reset DECL_CONTEXT
	of FUNCTION_DECLs.

2010-04-22  Laurynas Biveinis  <laurynas.biveinis@gmail.com>

	* sese.h (create_if_region_on_edge): Remove.

	* sese.c (create_if_region_on_edge): Make static.

	* tree-inline.c: Do not include ggc.h.

	* expr.c: Do not include ggc.h.

	* Makefile.in (tree-inline.o, expr.o): Remove $(GGC_H) from
	dependencies.

2010-04-22  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/43744
	* config/sh/sh.c (find_barrier): Don't emit a constant pool
	in the middle of insns for casesi_worker_2.

2010-04-22  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/x-aix: Override LDFLAGS for all COMPILERS.

2010-04-22  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/43842
	* tree-vect-loop.c (vect_create_epilog_for_reduction): Handle
	loop unrolling in update of exit phis. Fix comment.
	* tree-vect-slp.c (vect_analyze_slp): Check that there are at
	least two reduction statements in the loop before starting SLP
	analysis.

2010-04-22  Nick Clifton  <nickc@redhat.com>

	* config/stormy16/stormy16-lib2.c (__ucmpsi2): Fix thinko.

2010-04-22  Alexander Monakov  <amonakov@ispras.ru>

	* tree-ssa-reassoc.c (eliminate_plus_minus_pair): Handle BIT_NOT_EXPR
	to simplify a + ~a.

2010-04-22  Laurynas Biveinis  <laurynas.biveinis@gmail.com>

	* tree-parloops.c (loop_parallel_p): New argument
	parloop_obstack.  Pass it down.
	(parallelize_loops): New variable parloop_obstack.  Initialize it,
	pass it down, free it.

	* tree-loop-linear.c (linear_transform_loops): Pass down
	lambda_obstack.

	* tree-data-ref.h (lambda_compute_access_matrices): New argument
	of type struct obstack *.

	* tree-data-ref.c (analyze_subscript_affine_affine): New variable
	scratch_obstack.  Initialize it, pass down, free it.

	* lambda.h (lambda_loop_new): Remove.
	(lambda_matrix_new, lambda_matrix_inverse)
	(lambda_trans_matrix_new, lambda_trans_matrix_inverse): New