@@ -1,3 +1,9 @@
+2010-04-23  Martin Jambor  <mjambor@suse.cz>
+
+	PR middle-end/43835
+	* tree-sra.c (ipa_sra_preliminary_function_checks): Check that the
+	function does not have type attributes.
+
 2010-04-23  Richard Guenther  <rguenther@suse.de>
 
 	PR lto/42653
